<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">Swapnil\'s Nanodegree Apps!</string>
    <string name="button1_title">Spotify Streamer</string>
    <string name="button2_title">Scores App</string>
    <string name="button3_title">Library App</string>
    <string name="button4_title">Build It Bigger</string>
    <string name="button5_title">XYZ Reader</string>
    <string name="button6_title">Capstone: My Own App</string>
    <string name="button_message">This button will launch&#160;</string>
</resources>
